tags and descriptions
Signed-off-by: piyush mehta <me@piyushmehta.com>

--- a/popup.html
+++ b/popup.html
@@ -100,36 +100,42 @@
 			<div class="flex">
 				<a href="https://github.com/OpenGenus" target="blank">
 					<i class="fa fa-github"></i>
+					<p style="font-size: 70%">GitHub</p>
 				</a>
 			</div>
 
 			<div class="flex">
 				<a href="https://www.linkedin.com/company/opengenus/" target="blank">
 					<i class="fa fa-linkedin"></i>
+					<p style="font-size: 70%">LinkedIn</p>
 				</a>
 			</div>
 
 			<div class="flex">
 				<a href="https://medium.com/@opengenus" target="blank">
 					<i class="fa fa-medium"></i>
+					<p style="font-size: 70%">Medium</p>
 				</a>
 			</div>
 
 			<div class="flex">
 				<a href="https://twitter.com/OpenGenus" target="blank">
 					<i class="fa fa-twitter"></i>
+					<p style="font-size: 70%">Twitter</p>
 				</a>
 			</div>
 
 			<div class="flex">
 				<a href="https://discourse.opengenus.org/" target="blank">
 					<i class="fa fa-home"></i>
+					<p style="font-size: 70%">Forums</p>
 				</a>
 			</div>
 
 			<div class="flex">
 				<a href="https://iq.opengenus.org/" target="blank">
 					<i class="fa fa-map-pin"></i>
+					<p style="font-size: 70%">IQ</p>
 				</a>
 			</div>
 
